--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -23,7 +23,7 @@
   --text-secondary: #969696;
   --text-subline: #fff;
   --hr: #cfcfcf;
-  --light-mode-switch: #0D1117;
+  --light-mode-switch: #282232;
   --example-background: #f5f5f5;
   --example-color: #7d7d7d;
   --example-border: #ababab;
@@ -35,6 +35,7 @@
   --code-keyword: #07a;
   --code-function: #DD4A68;
   --code-regex: #e90;
+  --header-shadow: 0 6px 7px -6px rgb(0 0 0 / 10%), 0 12px 10px -6px rgb(0 0 0 / 12%), 0 31px 40px -6px rgb(0 0 0 / 20%);
 }
 
 /* Dark mode */
@@ -55,6 +56,7 @@ body.atcb-dark {
   --code-keyword: #99a2cd;
   --code-function: #f08d49;
   --code-regex: #7ec699;
+  --header-shadow: 0 6px 7px -6px rgb(0 0 0 / 15%), 0 12px 20px -6px rgb(0 0 0 / 18%), 0 31px 70px -6px rgb(0 0 0 / 34%);
 }
 
 /******************************
@@ -405,7 +407,7 @@ body.atcb-dark .light-mode-switch div::after {
 
 #header {
   background: linear-gradient(45deg, var(--primary-color), var(--primary-color), var(--primary-color-light), var(--primary-color-light));
-  box-shadow: 0 6px 7px -6px rgb(0 0 0 / 15%), 0 12px 20px -6px rgb(0 0 0 / 18%), 0 31px 70px -6px rgb(0 0 0 / 34%);
+  box-shadow: var(--header-shadow);
   display: flex;
   justify-content: center;
   padding: 0 25px 50px;
