--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -61,9 +61,9 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/paytone-one-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/paytone-one-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/paytone-one-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/paytone-one-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/paytone-one-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/paytone-one-v18-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* nunito-300 - latin */
@@ -73,9 +73,9 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 300;
   src: local(''),
-       url('../fonts/nunito-v25-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/nunito-v25-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/nunito-v25-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-300.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* nunito-regular - latin */
@@ -85,9 +85,9 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/nunito-v25-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/nunito-v25-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/nunito-v25-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* nunito-600 - latin */
@@ -97,9 +97,9 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 600;
   src: local(''),
-       url('../fonts/nunito-v25-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/nunito-v25-latin-600.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/nunito-v25-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-600.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* nunito-800 - latin */
@@ -109,9 +109,9 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 800;
   src: local(''),
-       url('../fonts/nunito-v25-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/nunito-v25-latin-800.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/nunito-v25-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-800.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* nunito-900 - latin */
@@ -121,31 +121,33 @@ body.atcb-dark {
   font-style: normal;
   font-weight: 900;
   src: local(''),
-       url('../fonts/nunito-v25-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/nunito-v25-latin-900.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/nunito-v25-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-900.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/nunito-v25-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* fira-mono-regular - latin */
 @font-face {
+  font-display: swap;
   font-family: 'Fira Mono';
   font-style: normal;
   font-weight: 400;
   src: local(''),
-       url('../fonts/fira-mono-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/fira-mono-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/fira-mono-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /* fira-mono-700 - latin */
 @font-face {
+  font-display: swap;
   font-family: 'Fira Mono';
   font-style: normal;
   font-weight: 700;
   src: local(''),
-       url('../fonts/fira-mono-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/fira-mono-v14-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/fira-mono-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+       url('https://tz.add-to-calendar-technology.com/demo_assets/fonts/fira-mono-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
 }
 
 /******************************
@@ -215,12 +217,15 @@ h3 {
 
 @media only screen and (max-width: 800px) {
   h3 {
-    text-align:center;
+    text-align: center;
   }
 }
 
-.description {
+p {
   text-align: left;
+}
+
+.description {
   padding-bottom: 40px;
 }
 
@@ -428,30 +433,29 @@ body.atcb-dark .light-mode-switch div::after {
   margin: 80px;
 }
 
-.example-wrapper {
-  box-sizing: border-box;
-  margin: auto;
-  max-width: 1000px;
-  padding: 0 25px;
-  width: 100%;
-}
-
 .example {
   box-shadow: rgba(0 0 0 / 10%) 2px 5px 18px -1px, rgba(0 0 0 / 20%) 2px 2px 10px -3px;
   box-sizing: border-box;
   text-align: center;
   width: 100%;
   text-align: center;
-  width: 100%;
-  border-radius: 20px;
+  margin: 50px 0;
   background-color: var(--example-bg);
-  padding: 60px 20px;  
+  padding: 60px 40px;  
 }
 
 #tz-input-wrapper {
-  margin: 0 auto;
+  box-sizing: border-box;
   width: 100%;
-  max-width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-right: 140px;
+}
+
+#tz-input-wrapper svg.arrow {
+  stroke: var(--secondary-color);
+  margin-right: 25px;
 }
 
 #tz-output-wrapper {
@@ -461,7 +465,7 @@ body.atcb-dark .light-mode-switch div::after {
   display: none;
   font-size: 0.8em;
   text-align: left;
-  margin: 30px auto 0;
+  margin: 50px auto 0;
   width: 100%;
   max-width: 550px;
 }
@@ -484,6 +488,14 @@ body.atcb-dark .light-mode-switch div::after {
 
   #header-right {
     margin: 80px 25px 30px;
+  }
+
+  #tz-input-wrapper {
+    padding-right: 0;
+  }
+
+  #tz-input-wrapper svg {
+    display: none;
   }
 }
 
@@ -535,9 +547,9 @@ pre {
   box-shadow: rgba(0 0 0 / 10%) 2px 5px 18px -1px, rgba(0 0 0 / 40%) 2px 2px 10px -3px;
   border-radius: 8px;
   font-family: Nunito, Arial, sans-serif;
-  width: 100%;
+  width: 280px;
   padding: 12px 48px 12px 12px;
-  box-sizing: border-box;
+  box-sizing: content-box;
   position: relative;
   font-size: 16px;
   line-height: 1.5;
@@ -553,7 +565,6 @@ pre {
 .autocomplete-input[aria-expanded="true"] {
   border: 2px solid var(--primary-color);
   background-color: #fff;
-  background-position: right 10px center;
   outline: none;
   margin: 0;
   box-shadow: rgba(0 0 0 / 30%) 2px 5px 18px -1px, rgba(0 0 0 / 35%) 2px 2px 10px -3px;
@@ -585,7 +596,6 @@ pre {
 }
 
 .autocomplete-result-list {
-  cursor: pointer;
   margin: 0;
   border: 2px solid var(--primary-color);
   padding: 0;
@@ -638,7 +648,7 @@ pre {
 
 /* Single result item */
 .autocomplete-result {
-  cursor: default;
+  cursor: pointer;
   text-align: left;
   padding: 12px;
 }
