demo dark mode update

--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -43,7 +43,7 @@ body.atcb-dark {
   --primary-color: #539eff;
   --primary-color-light: #a9ceff;
   --primary-color-dark: #336db9;
-  --page-background: #121418;
+  --page-background: #1b1d21;
   --example-bg: #222830;
   --text: #e6e2ed;
   --github: #222;
