some tiny text updates

--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -6,6 +6,7 @@
  * Creator: Jens Kuerschner (https://jenskuerschner.de)
  * Project: https://github.com/add2cal/timezones-ical-library
  * License: Apache-2.0
+ * DO NOT REMOVE THE COPYRIGHT NOTICE ABOVE!
  * 
  */
 
