--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -221,7 +221,7 @@ pre + h4 {
   margin-top: 60px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (width <= 800px) {
   h3,
   h4 {
     text-align: center;
@@ -351,7 +351,7 @@ a.github:hover svg {
   padding: 30px 0;
 }
 
-@media (max-width: 991px) {
+@media (width <= 991px) {
   #logo {
     width: 300px;
     padding: 0;
@@ -441,7 +441,7 @@ body.atcb-dark .light-mode-switch div::after {
   background: var(--primary-color-light);
 }
 
-@media (max-width: 991px) {
+@media (width <= 991px) {
   #light-mode-switch-header div::after {
     background: var(--primary-color);
   }
@@ -502,7 +502,7 @@ body.atcb-dark .light-mode-switch div::after {
   max-width: 550px;
 }
 
-@media (max-width: 991px) {
+@media (width <= 991px) {
   #header {
     background: linear-gradient(180deg, var(--primary-color), var(--primary-color), var(--primary-color-light));
     flex-direction: column;
@@ -526,7 +526,7 @@ body.atcb-dark .light-mode-switch div::after {
   }
 }
 
-@media (max-width: 575px) {
+@media (width <= 575px) {
   .example-wrapper {
     padding: 0;
   }
