--- a/demo_assets/css/demopage.css
+++ b/demo_assets/css/demopage.css
@@ -3,7 +3,7 @@
  * Add to Calendar TimeZones iCal Library - Demo Page Style
  * ++++++++++++++++++++++++++++++++++++++++++++++++++++++++
  *
- * Creator: Jens Kuerschner (https://jenskuerschner.de)
+ * Creator: Jens Kuerschner (https://jekuer.com)
  * Project: https://github.com/add2cal/timezones-ical-library
  * License: Apache-2.0
  * DO NOT REMOVE THE COPYRIGHT NOTICE ABOVE!
