--- a/demo/src/components/TimeZoneLookup.astro
+++ b/demo/src/components/TimeZoneLookup.astro
@@ -1,5 +1,5 @@
 ---
-import TimeZoneLookupVue from './TimeZoneLookup.vue';
+import TimeZoneLookupVue from "./TimeZoneLookup.vue";
 ---
 
 <TimeZoneLookupVue client:load />
