--- a/demo/src/layouts/Layout.astro
+++ b/demo/src/layouts/Layout.astro
@@ -60,11 +60,7 @@ const structuredData = {
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
     <!-- icons and manifest -->
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/favicon/favicon.svg"
-    />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
     <link
       rel="icon"
       type="image/png"
