--- a/demo/src/components/LightModeToogle.astro
+++ b/demo/src/components/LightModeToogle.astro
@@ -10,7 +10,7 @@ const switchId = header ? "light-mode-switch-header" : "light-mode-switch";
 
 <button
   id={switchId}
-  class="light-mode-switch group relative justify-center tap-highlight-transparent focus-visible:ring-secondary z-20 flex cursor-pointer opacity-75 hover:opacity-100 rounded-full border-0 bg-transparent p-3 outline-none select-none focus-visible:ring-2"
+  class="light-mode-switch group tap-highlight-transparent focus-visible:ring-secondary relative z-20 flex cursor-pointer justify-center rounded-full border-0 bg-transparent p-3 opacity-75 outline-none select-none hover:opacity-100 focus-visible:ring-2"
   aria-label="Light/Dark Mode Switch"
 >
   <div
@@ -44,7 +44,8 @@ const switchId = header ? "light-mode-switch-header" : "light-mode-switch";
         r="10"
         fill="currentColor"
         mask={`url(#${maskId})`}
-        class="transition-colors duration-500 ease-out dark:fill-gray-100 fill-gray-900"></circle>
+        class="fill-gray-900 transition-colors duration-500 ease-out dark:fill-gray-100"
+      ></circle>
     </svg>
   </div>
 </button>
@@ -82,7 +83,7 @@ const switchId = header ? "light-mode-switch-header" : "light-mode-switch";
         localStorage.setItem("theme", isDark ? "dark" : "light");
         document.documentElement.setAttribute(
           "data-theme",
-          isDark ? "github-dark" : "github-light"
+          isDark ? "github-dark" : "github-light",
         );
       });
     });
