--- a/demo/src/components/Header.astro
+++ b/demo/src/components/Header.astro
@@ -32,6 +32,7 @@ import LightModeToogle from "@components/LightModeToogle.astro";
       class="rounded-full p-2 opacity-75 ring-0 select-none focus-within:outline-2 hover:opacity-100"
       target="_blank"
       rel="noopener noreferrer"
+      aria-label="GitHub Repository"
     >
       <GithubLogo class="h-6 w-6 fill-black dark:fill-white" />
     </a>
