--- a/demo/src/components/LightModeToogle.astro
+++ b/demo/src/components/LightModeToogle.astro
@@ -11,7 +11,7 @@ const switchId = header ? "light-mode-switch-header" : "light-mode-switch";
 <button
   id={switchId}
   class="light-mode-switch group tap-highlight-transparent focus-visible:ring-secondary relative z-20 flex cursor-pointer justify-center rounded-full border-0 bg-transparent p-3 opacity-75 outline-none select-none hover:opacity-100 focus-visible:ring-2"
-  aria-label="Light/Dark Mode Switch"
+  aria-label="Toggle light/dark mode"
 >
   <div
     class:list={[
