--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -120,7 +120,7 @@ import importedCode from "@assets/sample-ics-code.ics?raw";
         >.ics.<br />
       </p>
       <p class="font-bold">This is case sensitive!</p>
-      <p class="mt-10 opacity-50 hover:opacity-100">
+      <p class="mt-10 opacity-70 hover:opacity-100">
         (Mind that this does not deliver a fully valid ics file, since it only
         contains the VTIMEZONE part.<br />
         You will need to combine this with your other event information.)
@@ -165,18 +165,19 @@ import importedCode from "@assets/sample-ics-code.ics?raw";
   </main>
   <footer class="bg-white py-20 shadow-inner dark:bg-black">
     <div class="container flex w-fit items-center gap-6 text-sm font-bold">
-      <div class="opacity-50"><Version /></div>
+      <div class="opacity-70"><Version /></div>
       <a
         href="https://github.com/add2cal/timezones-ical-library"
         class="rounded-full p-2 opacity-75 ring-0 select-none focus-within:outline-2 hover:opacity-100"
         target="_blank"
         rel="noopener noreferrer"
+        aria-label="GitHub Repository"
       >
         <GithubLogo class="h-6 w-6 fill-black dark:fill-white" />
       </a>
       <LightSwitch />
     </div>
-    <div class="container mt-10 text-center text-xs text-balance opacity-50">
+    <div class="container mt-10 text-center text-xs text-balance opacity-70">
       This page has been built and is maintained by the team behind the "Add to
       Calendar Button". See <a
         target="_blank"
