fixing hydration issues

--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -25,7 +25,7 @@ import importedCode from "@assets/sample-ics-code.ics?raw";
         any other framework or library.
       </p>
     </div>
-    <Lookup client:load />
+    <Lookup client:only="vue" />
     <div class="container py-14">
       <h3>📦 How to install</h3>
       <p>Simply install the package via npm:</p>
