--- a/demo/src/layouts/Layout.astro
+++ b/demo/src/layouts/Layout.astro
@@ -59,7 +59,7 @@ const structuredData = {
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
     />
-    <!-- icons and manifest -->
+    <!-- icons -->
     <link rel="icon" type="image/svg+xml" href="/favicons/favicon.svg" />
     <link
       rel="icon"
@@ -78,12 +78,12 @@ const structuredData = {
       sizes="180x180"
       href="/favicons/apple-touch-icon.png"
     />
-    <link rel="manifest" href="/manifest.json" />
     <link
       rel="mask-icon"
       href="/favicons/safari-pinned-tab.svg"
       color={primaryColor}
     />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="msapplication-TileColor" content={primaryColor} />
     <meta name="theme-color" content={primaryColor} />
     <!-- descriptive -->
