--- a/demo/src/layouts/Layout.astro
+++ b/demo/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ const pageUrl = new URL(Astro.url.pathname, Astro.site);
 const title =
   "Time Zones iCal Library | Easy access to the official time zones data";
 const description =
-  "The convenient way to directly access the most recent official time zone information for iCalendar files with JavaScript. Free and open source.";
+  "The convenient way to directly access the most recent official time zone information for iCalendar files with JavaScript/TypeScript. Free and open source.";
 const ogImage = Astro.site + "img/og.png";
 const xImage = Astro.site + "img/x.png";
 const primaryColor = "#539eff";
