--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -13,7 +13,7 @@ import importedCode from "@assets/sample-ics-code.ics?raw";
   <Header />
   <main>
     <div class="container py-20">
-      <h3>🗓️ iCal Time zone information for JavaScript</h3>
+      <h3>🗓️ iCal Time zone information for JavaScript/TypeScript</h3>
       <p>
         This tool converts the most recent IANA (formerly Olson) time zone
         database files into VTIMEZONE blocks, which are compatible with the
@@ -153,13 +153,13 @@ import importedCode from "@assets/sample-ics-code.ics?raw";
         you only need time zone information. No API, of course. Basically,
         nothing of any use to me.<br />
         The official database, on the other hand, is not directly accessible - especially
-        not via JavaScript.
+        not via JavaScript/TypeScript.
       </p>
       <p>
         That's why I came up with this open source repository, pulling the
-        latest official data, making it usable via JavaScript, and offering the
-        most essential data, while stripping out all the rest - for best
-        performance and bundle size.
+        latest official data, making it usable via JavaScript/TypeScript, and
+        offering the most essential data, while stripping out all the rest - for
+        best performance and bundle size.
       </p>
     </div>
   </main>
